--- a/googleReadV2.ipynb
+++ b/googleReadV2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "googleReadV2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO97shnTjlWgDAslKRJD8QU",
+      "authorship_tag": "ABX9TyMMW7KE0MACQJ9fZL/xWV6F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -339,11 +339,11 @@
       "cell_type": "code",
       "source": [
         "newest_df = {\n",
-        "   ## 'Review Text' : df['Review text'].astype(str),\n",
+        "    'Review Text' : df['Review text'].astype(str),\n",
         "    'Rating' : df['Rating'].astype(int),\n",
         "    'Score' : df['Score'].astype(float),\n",
-        "    'Owner' : df['Owner'].astype(str),\n",
-        "    'Sentiment' : df['Sentiment'].astype(str)\n",
+        "    'Sentiment' : df['Sentiment'].astype(str),\n",
+        "    'Owner' : df['Owner'].astype(str)\n",
         "}\n",
         "\n",
         "newDataFrame = pd.DataFrame(newest_df)"
@@ -351,7 +351,7 @@
       "metadata": {
         "id": "hUMqfsL9rIdM"
       },
-      "execution_count": 130,
+      "execution_count": 134,
       "outputs": []
     },
     {
@@ -364,26 +364,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f_V4yjVNsPsl",
-        "outputId": "f11c7dad-b68a-44db-d7dc-92ef7066d115"
+        "outputId": "01b1b527-4859-4aa3-a57a-65adb9dfef88"
       },
-      "execution_count": 131,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "    Rating   Score     Owner Sentiment\n",
-            "1        5  0.9598  Emmanuel  Positive\n",
-            "2        5  0.9810  Emmanuel  Positive\n",
-            "3        5  0.9856      STPG  Positive\n",
-            "4        5  0.5413  Emmanuel  Positive\n",
-            "5        5  0.8540  Emmanuel  Positive\n",
+            "    Rating   Score Sentiment     Owner\n",
+            "1        5  0.9598  Positive  Emmanuel\n",
+            "2        5  0.9810  Positive  Emmanuel\n",
+            "3        5  0.9856  Positive      STPG\n",
+            "4        5  0.5413  Positive  Emmanuel\n",
+            "5        5  0.8540  Positive  Emmanuel\n",
             "..     ...     ...       ...       ...\n",
-            "59       1  0.0258      STPG   Neutral\n",
-            "60       5  0.4754      STPG   Neutral\n",
-            "61       5  0.5719      STPG  Positive\n",
-            "62       5  0.6705  Emmanuel  Positive\n",
-            "63       5  0.8221      STPG  Positive\n",
+            "59       1  0.0258   Neutral      STPG\n",
+            "60       5  0.4754   Neutral      STPG\n",
+            "61       5  0.5719  Positive      STPG\n",
+            "62       5  0.6705  Positive  Emmanuel\n",
+            "63       5  0.8221  Positive      STPG\n",
             "\n",
             "[63 rows x 4 columns]\n"
           ]
