--- a/googleReadV2.ipynb
+++ b/googleReadV2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "googleReadV2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMMW7KE0MACQJ9fZL/xWV6F",
+      "authorship_tag": "ABX9TyM8sucw8ABDQR6WXYboEsnn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,8 +54,13 @@
     {
       "cell_type": "code",
       "source": [
+        "## import of all relevant libraries\n",
+        "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
+        "\n",
+        "!pip install vaderSentiment\n",
+        "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
         "\n",
         "from google.colab import auth\n",
         "auth.authenticate_user()\n",
@@ -73,6 +78,7 @@
     {
       "cell_type": "code",
       "source": [
+        "## open the google sheet which has the data\n",
         "wb = gc.open_by_url('https://docs.google.com/spreadsheets/d/1_vROEMAQ29haCkI1yowbZh1h5qJfFWctnOqhxHneytE/edit#gid=0')\n",
         "\n",
         "import nltk \n",
@@ -83,9 +89,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5288f4b9-11ca-48a0-d05a-aaa82e5d5d67"
+        "outputId": "576f7e6a-3f3a-4432-9a41-9db52d6e4efa"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,49 +120,14 @@
         "data = sheet.get_all_values()\n",
         "df = pd.DataFrame(data)\n",
         "df.columns = df.iloc[0]\n",
-        "df = df.iloc[1:]"
+        "df = df.iloc[1:]\n",
+        "reviewList = list(df['Review text'])"
       ],
       "metadata": {
         "id": "fSWdC8JWFlum"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "reviewList = list(df['Review text'])\n"
-      ],
-      "metadata": {
-        "id": "RQ6dVOxwGGYF"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(reviewList[1])\n",
-        "print(range(len(reviewList)))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "zOAggaftz-kR",
-        "outputId": "4f2b0787-c94e-4d7f-e155-07df3251b436"
-      },
-      "execution_count": 70,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "I only have the highest praise for Emmanuel from St Trinity Property Group. His level of professionalism and client service is second to none! I first met Emmanuel with a very clear view of the apartments I wanted to inspect for purchase consideration. However, Emmanuel still took the time to understand my needs and then suggested 3 other apartments I should also look at, in addition to the apartments I initially wanted to view.  After viewing all 5 apartments in June, I proceeded to purchase one of the other apartments Emmanuel had suggested; which was actually slightly cheaper and a far better fit for my needs. When it came to contract exchange I wanted a slight contract variation which was initially declined, yet with Emmanuel’s timely assistance was ultimately agreed to. This clearly evidences the fact Emmanuel always has his client’s best interests in mind. I was extremely lucky to have come across Emmanuel and it is without any hesitation that I would recommend Emmanuel to any prospective purchaser.\n",
-            "range(0, 63)\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -166,53 +137,19 @@
         "\n",
         "for i in range(len(reviewList)):\n",
         "  x = nltk.word_tokenize(reviewList[i])\n",
-        "  tokens.append(x)\n",
-        "\n"
+        "  tokens.append(x)"
       ],
       "metadata": {
         "id": "2zacqMd512If"
       },
-      "execution_count": 51,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "pip install vaderSentiment"
-      ],
-      "metadata": {
-        "id": "OKbSoPX9PXmS"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer"
-      ],
-      "metadata": {
-        "id": "rfiZIQYaZI2s"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import numpy as np"
-      ],
-      "metadata": {
-        "id": "f1zuruLDo0Sy"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "## VaderSentiment analyzer - assign a sentiment score to each review\n",
         "score = np.transpose([]) \n",
-        "\n",
         "analyzer = SentimentIntensityAnalyzer()\n",
         "for sentence in reviewList:\n",
         "  vs = analyzer.polarity_scores(sentence)\n",
@@ -220,28 +157,18 @@
         "##print(\"{:-<65} {}\".format(sentence, str(vs)))\n",
         "\n",
         "df['Score'] = score\n",
-        " "
-      ],
-      "metadata": {
-        "id": "ATXPTs2_ZalW"
-      },
-      "execution_count": 120,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "\n",
         "print(score)\n",
-        "score.size"
+        "score.size "
       ],
       "metadata": {
+        "id": "ATXPTs2_ZalW",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "mxqvMp3_qArb",
-        "outputId": "5eecea84-a38d-485f-f480-65540265a1d5"
+        "outputId": "53ee0096-46aa-4a46-afef-1b30e433b220"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,7 +191,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 7
         }
       ]
     },
@@ -280,35 +207,28 @@
         "  else:\n",
         "    return 'Neutral'\n",
         "\n",
-        "## transforming\n",
+        "## making the sentiment scores into its own dataframe column\n",
         "df['Sentiment'] = df['Score'].apply(get_class)"
       ],
       "metadata": {
         "id": "LgqfGzZkcDiG"
       },
-      "execution_count": 127,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "consultant = ['Emmanuel', 'Jack', 'Kevin', 'Lisa', 'Mohit', 'Rebekah', 'Reneh', 'Rossetta', 'Sophie', 'Terry']\n"
-      ],
-      "metadata": {
-        "id": "KloLmdeWkDwJ"
-      },
-      "execution_count": 107,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "## populating a list of consultants\n",
+        "consultant = ['Emmanuel', 'Jack', 'Kevin', 'Lisa', 'Mohit', 'Rebekah', 'Reneh', 'Rossetta', 'Sophie', 'Terry']\n",
+        "\n",
+        "## creating an empty list \n",
         "owner = []\n",
-        "for k in range(63):\n",
+        "for k in range(63):     ##iterate through the entire dataset\n",
         "  x = 0\n",
-        "  for i in tokens[k]:\n",
-        "    for j in consultant:\n",
-        "      if i == j:\n",
+        "  for i in tokens[k]:   ##iterate through all tokens\n",
+        "    for j in consultant: ##iterate through all consultants\n",
+        "      if i == j:        ##find matching consultant items in the tokens\n",
         "        x = x+1 \n",
         "        y = j\n",
         "  if x > 0:\n",
@@ -321,25 +241,15 @@
       "metadata": {
         "id": "DMA_8JfljnwQ"
       },
-      "execution_count": 116,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(owner)"
-      ],
-      "metadata": {
-        "id": "EAmKjrMMqlOR"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "#create new dataframe schema which includes the columns we want\n",
         "newest_df = {\n",
-        "    'Review Text' : df['Review text'].astype(str),\n",
+        "  ##  'Review Text' : df['Review text'].astype(str),\n",
         "    'Rating' : df['Rating'].astype(int),\n",
         "    'Score' : df['Score'].astype(float),\n",
         "    'Sentiment' : df['Sentiment'].astype(str),\n",
@@ -351,7 +261,7 @@
       "metadata": {
         "id": "hUMqfsL9rIdM"
       },
-      "execution_count": 134,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -364,9 +274,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f_V4yjVNsPsl",
-        "outputId": "01b1b527-4859-4aa3-a57a-65adb9dfef88"
+        "outputId": "4585b9d2-2e87-4ede-a81b-0093a048de01"
       },
-      "execution_count": 133,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
